# lab_c

./: EcoLab.docx  README.txt
EcoLab1_code/: CMakeLists.txt
EcoLab1_code/HeaderFiles/: CEcoLab1Gnome.h  CEcoLab1GnomeFactory.h  CEcoLab1Insertion.h  CEcoLab1InsertionFactory.h
EcoLab1_code/SharedFiles/: IEcoLab1.h  IdEcoLab1Gnome.h  IdEcoLab1Insertion.h
EcoLab1_code/SourceFiles/: CEcoLab1Gnome.c  CEcoLab1GnomeFactory.c  CEcoLab1Insertion.c  CEcoLab1InsertionFactory.c
EcoLab1_code/UnitTest/SourceFiles/: EcoLab1.c
